...
  return (
    <>
      <View className="mb-4 flex-row items-center justify-between">
        <Text className="text-xl font-bold text-gray-600 dark:text-charcoal-300">{t('home.accounts')}</Text>
      </View>
      <Pressable
        testID="home-bitcoin-wallet-card"
        onPress={() => router.push('/wallets/bitcoin-wallet-details')}
        className="rounded-xl border border-gray-100 bg-gray-50 p-2 dark:border-charcoal-700 dark:bg-charcoal-900 "
      >
        <WalletView name={t('home.walletName')} symbol="BTC" type="On-chain" balanceSats={balanceBdk} testID="home-bitcoin-wallet" />
      </Pressable>
      <View className="my-2" />
      <Pressable testID="home-lightning-wallet-card" onPress={() => router.push('/wallets/ln-wallet-details')} className="rounded-xl border border-gray-100 bg-gray-50 p-2 dark:border-charcoal-700 dark:bg-charcoal-900">
        <WalletView name={t('home.l2WalletName')} symbol="BTC" type="Lightning" balanceSats={balanceBreez} lightningNetworkType="spark" testID="home-lightning-wallet" />
      </Pressable>
    </>
  );
};

...
