...
  const handleProceed = () => router.push('/settings/backup-seed-phrase/recovery-seed-phrase');

  const warnings = [t('mnemonicWarning.warning1'), t('mnemonicWarning.warning2'), t('mnemonicWarning.warning3')];

  return (
    <SafeAreaProvider>
      <SafeAreaView testID="recovery-warning-screen">
        <View className="flex h-full justify-between px-4">
          <Stack.Screen
            options={{
              headerTitleAlign: 'center',
              headerTitle: () => <HeaderTitle title={t('mnemonicWarning.header')} />,
              headerShown: true,
...
                  <Text className="flex-1 text-sm text-gray-700 dark:text-charcoal-200">{text}</Text>
                </View>
              ))}
            </View>
          </View>
          <View className="flex-col justify-between pb-4">
            <Button testID="cancel-button" label={t('mnemonicWarning.cancel')} fullWidth size="lg" variant="outline" className="mb-4" textClassName="text-base" onPress={handleCancel} />
            <Button testID="proceed-button" label={t('mnemonicWarning.proceed')} fullWidth size="lg" variant="secondary" textClassName="text-base text-white" onPress={handleProceed} />
          </View>
        </View>
      </SafeAreaView>
    </SafeAreaProvider>
  );
...
